correct headers installing

--- a/FaceDetector/CMakeLists.txt
+++ b/FaceDetector/CMakeLists.txt
@@ -129,7 +129,6 @@ message(STATUS "install targets library: " ${PROJECT_NAME})
 
 install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/${ENV_LIBRARY_DIR})
 message("destination:" ${CMAKE_INSTALL_PREFIX})
-install(FILES ${INCLUDE_FILES} DESTINATION ${ENV_INCLUDE_DIR})
-install(FILES ${COMMON_INCLUDE_FILES} DESTINATION ${ENV_INCLUDE_DIR}/Common)
-install(FILES ${SEETA_INCLUDE_FILES} DESTINATION ${ENV_INCLUDE_DIR}/seeta)
+install(FILES ${COMMON_INCLUDE_FILES} DESTINATION ${ENV_INCLUDE_DIR}/seeta/Common)
+install(FILES ${INCLUDE_FILES} DESTINATION ${ENV_INCLUDE_DIR}/seeta)
 
